--- a/fetusapp/static/style.css
+++ b/fetusapp/static/style.css
@@ -361,3 +361,35 @@ em {
 .card-cover{
     border-color: var(--vibrant-pink);
 }
+
+/* Patients: Patient Lite form */
+
+.patient-lite .input-group {
+    position: relative;
+    border-bottom: solid 2px var(--vibrant-pink);
+    margin: 2rem 0;
+}
+
+.patient-lite .input-group label{
+    color: var(--vibrant-pink);
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: .5s;
+}
+
+.patient-lite .input-group input {
+    width: 100%;
+    height: 2.5rem;
+    left: 1rem;
+    background: transparent;
+    border: none;
+    outline: none;
+}
+
+.patient-lite .input-group input:focus~label,
+.patient-lite .input-group input:valid~label {
+    top: -5px;
+}
+
+/* end of patients: patiend lite form */
