--- a/fetusapp/templates/patients.html
+++ b/fetusapp/templates/patients.html
@@ -15,7 +15,7 @@
             <div class="row row-cols-1 row-cols-lg-2 align-items-stretch g-4 py-4 text-bg-dark mt-1">
         
               <div class="col-12 col-lg-8 text-light">
-                <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg bg-dark">
+                <div class="card h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg bg-dark">
                   <div class="d-flex flex-column h-100 p-3 pb-3 text-shadow-1">
                     <form action="" method="post" id="findPatient">
                         <div class="input-group mb-3">
