--- a/fetusapp/static/style.css
+++ b/fetusapp/static/style.css
@@ -14,6 +14,10 @@
     background-color: black;
 }
 
+.no-border {
+    border: none !important;
+}
+
 .dark-mode {
     --vibrant-pink: #297FB9;
     --gradient-color: 41, 127, 185;    /* wise */
