--- a/fetusapp/templates/patients.html
+++ b/fetusapp/templates/patients.html
@@ -15,7 +15,7 @@
             <div class="row row-cols-1 row-cols-lg-2 align-items-stretch g-4 py-4 text-bg-dark mt-1">
         
               <div class="col-12 col-lg-8 text-light">
-                <div class="card h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg bg-dark">
+                <div class="card overflow-hidden text-bg-dark rounded-4 shadow-lg bg-dark">
                   <div class="d-flex flex-column h-100 p-3 pb-3 text-shadow-1">
                     <form action="" method="post" id="findPatient">
                         <div class="input-group mb-3">
@@ -76,12 +76,12 @@
               </div>
          
               <div class="col-12 col-lg-4">
-                <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" id="weather-bubble">
+                <div class="card card-cover overflow-hidden text-bg-dark rounded-4 shadow-lg" id="weather-bubble">
                   <div class="d-flex flex-column h-100 p-3 pb-3 text-shadow-1">
                     <div class="wrapper">
                         <div class="form-wrapper patient-lite px-3">
                             <form action="">
-                                <h2>Create new patient</h2>
+                                <h2 class="text-center">Create new patient</h2>
                                 <div class="input-group">
                                     <input type="text" name="first_name" id="" required>
                                     <label for="first_name">Όνομα</label>
@@ -99,7 +99,10 @@
                                     <label for="email">Email</label>
                                 </div>
                             </form>
-                            <button type="submit" class="btn login-btn">Αποθήκευση</button>
+                            <div class="text-center pb-3">
+                                <button type="submit" class="btn login-btn px-5">Δημιουργία Καρτέλας</button>
+                            </div>
+                            
                         </div>
                     </div>
                   </div>
