changed signup forms

--- a/fetusapp/templates/patients.html
+++ b/fetusapp/templates/patients.html
@@ -77,7 +77,7 @@
          
               <div class="col-12 col-lg-4">
                 <div class="card card-cover overflow-hidden text-bg-dark rounded-4 shadow-lg" id="weather-bubble">
-                  <div class="d-flex flex-column h-100 p-3 pb-3 text-shadow-1">
+                  <div class="d-flex flex-column h-100 p-3 text-shadow-1">
                     <div class="wrapper">
                         <div class="form-wrapper patient-lite px-3">
                             <form action="">
