--- a/fetusapp/static/style.css
+++ b/fetusapp/static/style.css
@@ -14,6 +14,11 @@
     background-color: black;
 }
 
+.text-warning {
+    --bs-text-opacity: 1;
+    color: #ff4f40 !important;
+}
+
 .no-border {
     border: none !important;
 }
@@ -319,7 +324,10 @@ em {
     text-align: center;
 }
 
-#weather-bubble {
+#weather-bubble, 
+#pills-register,
+#pills-delete,
+#pills-update {
     background: var(--warm-beige);
     color: black;
     border: none;
