--- a/fetusapp/templates/signup.html
+++ b/fetusapp/templates/signup.html
@@ -61,13 +61,13 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-lg-6 col-12">
+              <div class="col-12">
                 <div class="input-group">
                   {{ form.first_name(id="first_name", type="text", placeholder=" ") }}
                   <label for="first_name">Όνομα</label>
                 </div>
               </div>
-              <div class="col-lg-6 col-12">
+              <div class="col-12">
                 <div class="input-group">
                   {{ form.last_name(id="last_name", type="text", placeholder=" ") }} 
                   <label for="last_name">Επώνυμο</label>
