--- a/fetusapp/templates/base.html
+++ b/fetusapp/templates/base.html
@@ -56,7 +56,7 @@
               <a class="nav-link {% if active_page == 'patient' %}active{% endif %}" href="{{url_for('patients.no_patient')}}">Καρτέλα Ασθενή</a>
             </li>
             <li>
-              <a class="nav-link {% if active_page == 'chat' %}active{% endif %}" href="{{url_for('core.chat')}}">AI Chat</a>
+              <a class="nav-link {% if active_page == 'chat' %}active{% endif %}" href="{{url_for('chatai.chat')}}">AI Chat</a>
             </li>
               {% if current_user.is_admin %}
               <li>
