--- a/fetusapp/templates/index.html
+++ b/fetusapp/templates/index.html
@@ -35,22 +35,28 @@ block content %}
 
         <div class="zd pt-5 container px-4 text-light align-items-stretch" id="icon-grid">
           {% if calendar_events | length > 0 %}
-          <h2 class="pb-5 text-center index-app" style="">There are {{ calendar_events | length }} scheduled appointments for today!</h2>
-          <div id="calendar-controls" class="text-end">
-            <!-- <button type="button" class="btn btn-outline-secondary me-1">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-compact-left" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M9.224 1.553a.5.5 0 0 1 .223.67L6.56 8l2.888 5.776a.5.5 0 1 1-.894.448l-3-6a.5.5 0 0 1 0-.448l3-6a.5.5 0 0 1 .67-.223"></path>
-              </svg>
-              <span class="visually-hidden">Previous</span>
-            </button> -->
-
-            <p class="" style="display: inline; font-size: 1.2rem;">{{ calendar_events[0].vobject_instance.vevent.dtstart.value.strftime("%Y-%m-%d") }}</p>
-            <!-- <button type="button" class="btn btn-outline-secondary ms-1">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-compact-right" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671"></path>
-              </svg>
-              <span class="visually-hidden">Next</span>
-            </button> -->
+          <h2 class="pb-3 text-center index-app">
+            Έχετε {{ calendar_events | length }} προγραμματισμέν
+            {%- if  calendar_events | length == 1 %}ο{% else %}α{% endif %} ραντεβού για
+            {% if current_date.date() == today.date() -%}σήμερα{% else %}τις {{ current_date.strftime('%d-%m-%Y') }}{% endif %}!
+          </h2>
+          <div class='calendar-container'>
+            <div id="calendar-controls" class="text-end">
+              <button onclick="changeDate(-1)" type="button" class="btn btn-outline-secondary me-1">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-compact-left" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd" d="M9.224 1.553a.5.5 0 0 1 .223.67L6.56 8l2.888 5.776a.5.5 0 1 1-.894.448l-3-6a.5.5 0 0 1 0-.448l3-6a.5.5 0 0 1 .67-.223"></path>
+                </svg>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <p id="current-date" style="display: inline; font-size: 1.2rem;">{{ current_date.strftime('%Y-%m-%d') }}</p>
+              <button onclick="changeDate(1)" type="button" class="btn btn-outline-secondary ms-1">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-compact-right" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd" d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671"></path>
+                </svg>
+                <span class="visually-hidden">Next</span>
+              </button>
+              
+            </div>
           </div>
           <div class="flex-grow-1" style="overflow-x: auto;">
             <table class="table table-dark table-hover">
@@ -185,6 +191,13 @@ block content %}
 <script>
   function performSearch(searchQuery) {
     window.location.href = `/patient_search?query=${searchQuery}`;
+  }
+
+  function changeDate(days) {
+    const currentDate = new Date(document.getElementById('current-date').textContent);
+    currentDate.setDate(currentDate.getDate() + days);
+    const newDate = currentDate.toISOString().split('T')[0];
+    window.location.href = `/${newDate}`;
   }
 </script>
 {% endblock %}
