update date picker

--- a/fetusapp/templates/index.html
+++ b/fetusapp/templates/index.html
@@ -48,13 +48,15 @@ block content %}
                 </svg>
                 <span class="visually-hidden">Previous</span>
               </button>
-              <p id="current-date" style="display: inline; font-size: 1.2rem;">{{ current_date.strftime('%Y-%m-%d') }}</p>
+              <input type="date" id="date-picker" class="form-control d-inline-block w-auto" onchange="changeDateToSelected()">
+              <p id="current-date" style="display: inline; font-size: 1.2rem;" class="visually-hidden">{{ current_date.strftime('%Y-%m-%d') }}</p>
               <button onclick="changeDate(1)" type="button" class="btn btn-outline-secondary ms-1">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-compact-right" viewBox="0 0 16 16">
                   <path fill-rule="evenodd" d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671"></path>
                 </svg>
                 <span class="visually-hidden">Next</span>
               </button>
+              
               
             </div>
           </div>
@@ -114,11 +116,7 @@ block content %}
 
     </main>
 
-
-
-    
-
-    {% else %}
+{% else %}
     <main class="form-signin w-100 m-auto pt-5">
       <h2 class="mb-4 mx-auto d-block text-center">
         <svg version="1.1"
@@ -199,5 +197,16 @@ block content %}
     const newDate = currentDate.toISOString().split('T')[0];
     window.location.href = `/${newDate}`;
   }
+
+  function changeDateToSelected() {
+    const selectedDate = document.getElementById('date-picker').value;
+    window.location.href = `/${selectedDate}`;
+  }
+
+  document.addEventListener('DOMContentLoaded', function() {
+    const datePicker = document.getElementById('date-picker');
+    const currentDate = document.getElementById('current-date').textContent;
+    datePicker.value = currentDate;
+  });
 </script>
 {% endblock %}
