--- a/fetusapp/templates/index.html
+++ b/fetusapp/templates/index.html
@@ -34,13 +34,8 @@ block content %}
         
 
         <div class="zd pt-5 container px-4 text-light align-items-stretch" id="icon-grid">
-          {% if calendar_events | length > 0 %}
-          <h2 class="pb-3 text-center index-app">
-            Έχετε {{ calendar_events | length }} προγραμματισμέν
-            {%- if  calendar_events | length == 1 %}ο{% else %}α{% endif %} ραντεβού για
-            {% if current_date.date() == today.date() -%}σήμερα{% else %}τις {{ current_date.strftime('%d-%m-%Y') }}{% endif %}!
-          </h2>
-          <div class='calendar-container'>
+
+          <div class='calendar-container pb-3'>
             <div id="calendar-controls" class="text-end">
               <button onclick="changeDate(-1)" type="button" class="btn btn-outline-secondary me-1">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-compact-left" viewBox="0 0 16 16">
@@ -49,7 +44,7 @@ block content %}
                 <span class="visually-hidden">Previous</span>
               </button>
               <input type="date" id="date-picker" class="form-control d-inline-block w-auto" onchange="changeDateToSelected()">
-              <p id="current-date" style="display: inline; font-size: 1.2rem;" class="visually-hidden">{{ current_date.strftime('%Y-%m-%d') }}</p>
+              <p id="current-date" class="visually-hidden">{{ current_date.strftime('%Y-%m-%d') }}</p>
               <button onclick="changeDate(1)" type="button" class="btn btn-outline-secondary ms-1">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-compact-right" viewBox="0 0 16 16">
                   <path fill-rule="evenodd" d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671"></path>
@@ -60,6 +55,14 @@ block content %}
               
             </div>
           </div>
+          {% if calendar_events | length > 0 %}
+          <h2 class="pb-3 text-center index-app">
+            Έχετε {{ calendar_events | length }} προγραμματισμέν
+            {%- if  calendar_events | length == 1 %}ο{% else %}α{% endif %} ραντεβού για
+            {% if current_date.date() == today.date() -%}σήμερα{% else %}τις {{ current_date.strftime('%d-%m-%Y') }}{% endif %}!
+          </h2>
+          
+          
           <div class="flex-grow-1" style="overflow-x: auto;">
             <table class="table table-dark table-hover">
               <thead>
@@ -110,7 +113,10 @@ block content %}
             </table>
           </div>
           {% else %}
-          <h2 class="pb-2 border-bottom">No appointments today</h2>
+          <h2 class="pb-3 border-bottom text-center">
+            Δεν βρέθηκαν προγραμματισμένα ραντεβού για
+            {% if current_date.date() == today.date() -%}σήμερα{% else %}τις {{ current_date.strftime('%d-%m-%Y') }}{% endif %}!
+          </h2>
           {% endif %}
         </div>
 
