add fallback logic for when the ai named entity extraction isn't working

--- a/fetusapp/templates/index.html
+++ b/fetusapp/templates/index.html
@@ -194,7 +194,7 @@ block content %}
 {% block javascript %}
 <script>
   function performSearch(searchQuery) {
-    window.location.href = `/patient_search?query=${searchQuery}`;
+    window.location.href = `/calendar_patient_search?search_query=${searchQuery}`;
   }
 
   function changeDate(days) {
