update the extract_patient_details_regex to fill in name and surname

--- a/fetusapp/templates/patients.html
+++ b/fetusapp/templates/patients.html
@@ -19,7 +19,7 @@
                   <div class="d-flex flex-column h-100 p-3 pb-3 text-shadow-1">
                     <form action="" method="post" id="findPatient">
                         <div class="input-group mb-3">
-                            <input type="text" class="form-control" name="search_query" placeholder="Search for a patient" aria-label="Search for a patient" aria-describedby="button-search" style="border-start-start-radius: 5rem ; border-end-start-radius: 5rem ;">
+                            <input type="text" class="form-control" name="search_query" placeholder="Ονοματεπώνυμο ή/και τηλέφωνο" aria-label="Search for a patient" aria-describedby="button-search" style="border-start-start-radius: 5rem ; border-end-start-radius: 5rem ;">
                             <button class="btn btn-outline-secondary" type="submit" id="button-search">Search</button>
                         </div>
                     </form>
